# lunartides-workshop

./: README.md  docker-compose.yml  loki-config.yaml  otel-collector-config.yaml  prometheus.yml
grafana/provisioning/dashboards/: dashboards.yaml
grafana/provisioning/datasources/: datasources.yaml
orchestrator/: Config.cs  Dockerfile  Makefile  MoonTide.csproj  Pipeline.cs  Program.cs  Telemetry.cs  go.mod  go.sum  pyproject.toml
orchestrator/cmd/moontide/: main.go
orchestrator/internal/config/: config.go
orchestrator/internal/health/: health.go
orchestrator/internal/pipeline/: pipeline.go
orchestrator/internal/telemetry/: telemetry.go
orchestrator/internal/worker/: client.go
orchestrator/moontide/: __main__.py  config.py  pipeline.py  telemetry.py
workers/flux/: Dockerfile
workers/rift/: Dockerfile
workers/shoal/: Dockerfile
workers/swell/: Dockerfile
