[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "moontide"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-grpc",
    "opentelemetry-instrumentation-requests",
    "requests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["moontide*"]
